spacing fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,7 @@ section {
 
 .separator {
 	border-top: 1px solid #cccccc;
+	margin-top: 20px;
 }
 
 .full-width { width: 100%; }
